--- a/src/styles/element-variables.scss
+++ b/src/styles/element-variables.scss
@@ -12,6 +12,8 @@ $--color-danger: #ff4949;
 
 $--button-font-weight: 400;
 
+// $--font-size-base: 13px;
+
 // $--color-text-regular: #1f2d3d;
 
 $--border-color-light: #dfe4ed;
@@ -23,6 +25,9 @@ $--table-border: 1px solid #dfe6ec;
 $--font-path: "~element-ui/lib/theme-chalk/fonts";
 
 @import "~element-ui/packages/theme-chalk/src/index";
+// 组件样式
+@import './components/progress-steps.scss';
+@import './components/query-select.scss';
 
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
