--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,15 +9,25 @@ $yellow:#FEC171;
 $panGreen: #30B08F;
 
 // sidebar
-$menuText:#403133;
+$menuText:#bfcbd9;
 $menuActiveText:#409EFF;
-$subMenuActiveText:#79bbff; // https://github.com/ElemeFE/element/issues/12951
+$subMenuActiveText:#f4f4f5;
 
-$menuBg:#fff;
-$menuHover:#e8f4ff;
+$menuBg:#304156;
+$menuHover:#263445;
 
-$subMenuBg:#fff;
-$subMenuHover:#e8f4ff;
+$subMenuBg:#1f2d3d;
+$subMenuHover:#001528;
+
+// $menuText:#403133;
+// $menuActiveText:#409EFF;
+// $subMenuActiveText:#79bbff; // https://github.com/ElemeFE/element/issues/12951
+
+// $menuBg:#fff;
+// $menuHover:#e8f4ff;
+
+// $subMenuBg:#fff;
+// $subMenuHover:#e8f4ff;
 
 $sideBarWidth: 210px;
 
